--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Install heroku
-        run: sudo apt-get install heroku
+        run: sudo snap install heroku
       - run: gem install rails --pre
       - run: heroku login
         env:
