--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -35,7 +35,7 @@ jobs:
           bundler-cache: true
       # Add or replace test runners here
       - name: Run tests
-        run: bin/rake
+        run: rake
 
   lint:
     runs-on: ubuntu-latest
