--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,21 +14,12 @@ jobs:
         with:
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
-      - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
-        with:
-          hugo-version: 'latest'
-          # extended: true
-
       - name: Build
-        run: |
-          hugo new blogcog
-          cd blogcog
-          hugo --minify
+        run: jekyll build ./
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          publish_dir: ./
