--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
-      - run: sudo gem install jekyll
+      - run: sudo bundler install
       - name: Build
         run: jekyll build ./
 
